fix max container set on mobile and generate button to block

--- a/css/global.sass
+++ b/css/global.sass
@@ -302,10 +302,10 @@ body
                 display: none
 
     .btn-generate
-        position: absolute
-        bottom: -66px
-        right: 50%
-        transform: translateX(50%)
+        position: relative
+        display: block
+        width: max-content
+        margin: 30px auto 0 auto
 
 // SECTION 3
 .section-3 
