--- a/css/main.css
+++ b/css/main.css
@@ -307,10 +307,10 @@ body {
   display: none;
 }
 .section-2 .btn-generate {
-  position: absolute;
-  bottom: -66px;
-  right: 50%;
-  transform: translateX(50%);
+  position: relative;
+  display: block;
+  width: max-content;
+  margin: 30px auto 0 auto;
 }
 
 .section-3 {
@@ -527,6 +527,14 @@ body {
   }
 }
 @media screen and (max-width: 500px) {
+  .navbar .navbar-container {
+    width: 90%;
+  }
+
+  .container {
+    width: 90%;
+  }
+
   .header {
     height: 100vh;
   }
