--- a/css/queries.sass
+++ b/css/queries.sass
@@ -42,6 +42,13 @@
             display: none
     
 @media screen and ( max-width: 500px )
+    .navbar
+        .navbar-container
+            width: 90%
+
+    .container 
+        width: 90%
+
     .header
         height: 100vh
         
